# Marketing-visibility-engine

./: .gitignore  AIMARK_MISSION.md  BEACHHEAD_OUTREACH.md  BOTAUTH.md  DEMO_RUNBOOK.md  Dockerfile  ECONOMY_LAYER.md  GROWTH_ENGINE_PLAN.md  GTM_BEACHHEAD_ACTIVATION.md  LICENSE  LINE_OA_GROWTH_KIT.md  LIVE_AGENT_HANDOFF.md  LOCAL_AGENT_BRIDGE.md  PLATFORM_REDESIGN.md  PRODUCTION_LAUNCH_PLAN.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test-verify-self.mjs
.github/workflows/: tests.yml  verify.yml
checklists/: facebook_2026.md
samples/: sample_page.html
scripts/: aimark-local-bridge.mjs  aimark-resident-agent.mjs  aimark-verify-production.mjs  generate-botauth-key.mjs  set-aimark-oauth-secrets.ps1  start-aimark-local-bridge.ps1  test-aimark-local-bridge-real-apply.mjs  test-aimark-local-bridge-real-runner.mjs  test-aimark-local-bridge.mjs  test-botauth.mjs  test-botpolicy.mjs
scripts/piano/: agent.mjs  modules.mjs  piano.mjs  test-piano.mjs  village-sim.mjs
tests/: test_audits.py
visibility_engine/: api.py  cli.py  crawler.py  report.py  types.py  web_adapter.py
visibility_engine/audits/: ai_crawlers.py  geo_aeo.py  social.py  technical_seo.py
visibility_engine/fixers/: llms_txt.py  robots_txt.py  schema.py
web/: .dev.vars.example  .env.local.example  DEPLOY.md  _headers  agent-pair.html  agent.html  analytics.html  bot.html  bot.md  classic.html  cockpit.html  dashboard.html  index.html  package-lock.json  package.json  privacy.html  proof-demo.html  terms.html  they-see-you.html  verify.html  wrangler.toml
(+129 files in other folders)
